# PinchMe

./: .gitignore  GEMINI.md  README.md  environment-min.yml  environment.yml  pixi.toml  pyproject.toml  requirements.txt  setup.py
src/pinchme/: __init__.py  config.py.template  dp_resources.py  lock.py  mimemail.py  package_pool.py  pasta_db.py  pasta_resource_registry.py  pinchme.py  pinchy.py  validation.py
src/pinchme/model/: resource_db.py
tests/: __init__.py  conftest.py  environment.yml  requirements.txt  test_model.py  test_pasta_resource_registry.py  test_validation.py
