[project]
authors = [{name = "James Brunt", email = "jwbrunt@gmail.com"}]
dependencies = []
name = "PinchMe"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
pinchme = "pinchme.pinchy:main"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
pinchme = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.12,<3.14"
click = ">=8.3.1,<9"
daiquiri = ">=3.0.0,<4"
pendulum = ">=3.2.0,<4"
pytest = ">=9.0.2,<10"
sqlite = ">=3.52.0,<4"
psycopg2 = ">=2.9.11,<3"
psycopg2-binary = ">=2.9,<3"
sqlalchemy = "<2.0"
