[project]
name = "PinchMe"
version = "0.2.0"
authors = [
    {name = "James Brunt", email = "jwbrunt@gmail.com"},
    {name = "Mark Servilla", email = "mark.servilla@gmail.com"},
]
description = "PinchMe - An EDI date repository integrity scanner."
requires-python = ">=3.13,<3.14"
dependencies = [] # Intentionally empty for pure Pixi management

[project.scripts]
pinchme = "pinchme.pinchy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
pinchme = { path = ".", editable = true }

[tool.pixi.dependencies]
# Environment & Language
python = ">=3.13.12,<3.14"
# Tools
pytest = ">=9.0.2,<10"
# Application Dependencies (Conda-forge versions)
click = ">=8.3.1,<9"
daiquiri = ">=3.0.0,<4"
pendulum = ">=3.2.0,<4"
sqlite = ">=3.52.0,<4"
psycopg2 = ">=2.9.11,<3"
psycopg2-binary = ">=2.9,<3"
sqlalchemy = ">=2,<3"
ruff = "*"

[tool.pixi.tasks]
check = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
run = "pinchme"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["D100", "D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
